force-app/main/default/objects/Travel_Policy_Config__mdt/Travel_Policy_Config__mdt.object-meta.xml
<CustomObject>
    <label>Travel Policy Configuration</label>
    <pluralLabel>Travel Policy Configurations</pluralLabel>
</CustomObject>