force-app/main/default/objects/Travel_Policy_Config__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Expense Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>