force-app/main/default/objects/Travel_Policy_Config__mdt/fields/Employee_Grade__c.field-meta.xml
<CustomField>
    <fullName>Employee_Grade__c</fullName>
    <label>Employee Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>