force-app/main/default/objects/Travel_Policy_Config__mdt/fields/Max_Amount_Limit__c.field-meta.xml
<CustomField>
    <fullName>Max_Amount_Limit__c</fullName>
    <label>Max Amount Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>