force-app/main/default/objects/Travel_Policy_Config__mdt/fields/Receipt_Required__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Receipt Required</label>
    <type>Checkbox</type>
</CustomField>