force-app/main/default/objects/Travel_Policy_Config__mdt/fields/Receipt_Required_Above_Amount__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Required_Above_Amount__c</fullName>
    <label>Receipt Required Above Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>