force-app/main/default/objects/Travel_Policy_Config__mdt/fields/Requires_Management_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Management_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Management Approval</label>
    <type>Checkbox</type>
</CustomField>